--- a/src/index.html
+++ b/src/index.html
@@ -55,7 +55,128 @@ title: Главная страница
                                         </div>
                                     </div>
                                 </div>
-                                <div class="home-main-slider__secondary"></div>
+                                <div class="home-main-slider__secondary">
+                                    <div class="home-main-slider__secondary_card slider-card">
+                                        <div class="slider-card__bg">
+                                            <img class="slider-card__bg_img" src="assets/images/home-new/card-image.jpg" alt="">
+                                            <div class="slider-card__bg_over"></div>
+                                        </div>
+                                        <div class="slider-card__content">
+                                            <div class="slider-card__img">
+                                                <img class="slider-card__img_item" src="assets/images/home-new/card-image.jpg" alt="">
+                                            </div>
+                                            <div class="slider-card__block">
+                                                <div class="slider-card__category">
+                                                    <svg xmlns="http://www.w3.org/2000/svg" width="15" height="14" viewBox="0 0 15 14" fill="none">
+                                                        <path d="M13.6361 0H0.848722C0.380793 0 0 0.380793 0 0.848722V9.27936C0 9.74728 0.380793 10.1281 0.848722 10.1281H13.6361C14.1041 10.1281 14.4848 9.74728 14.4848 9.27936V0.848722C14.4848 0.380793 14.1041 0 13.6361 0Z" fill="#847F7D" />
+                                                        <path d="M11.7704 12.2214H9.47881V10.9766H5.00888V12.2214H2.71733C2.48308 12.2214 2.29297 12.4115 2.29297 12.6457C2.29297 12.88 2.48308 13.0701 2.71733 13.0701H11.7704C12.0046 13.0701 12.1947 12.88 12.1947 12.6457C12.1947 12.4115 12.0046 12.2214 11.7704 12.2214Z" fill="#847F7D" />
+                                                    </svg>
+                                                    <span>PC</span>
+                                                </div>
+                                                <div class="slider-card__name">
+                                                    Название игры
+                                                </div>
+                                                <div class="slider-card__text">
+                                                    Lorem ipsum dolor sit amet consectetur. Cursus sem id viverra lectus.
+                                                </div>
+                                                <div class="slider-card__actions">
+                                                    <a href="#" class="slider-card__action btn-orange">Купить игру</a>
+                                                    <div class="slider-card__discount">-45%</div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="home-main-slider__secondary_card slider-card">
+                                        <div class="slider-card__bg">
+                                            <img class="slider-card__bg_img" src="assets/images/home-new/card-image.jpg" alt="">
+                                            <div class="slider-card__bg_over"></div>
+                                        </div>
+                                        <div class="slider-card__content">
+                                            <div class="slider-card__img">
+                                                <img class="slider-card__img_item" src="assets/images/home-new/card-image.jpg" alt="">
+                                            </div>
+                                            <div class="slider-card__block">
+                                                <div class="slider-card__category">
+                                                    <svg xmlns="http://www.w3.org/2000/svg" width="15" height="14" viewBox="0 0 15 14" fill="none">
+                                                        <path d="M13.6361 0H0.848722C0.380793 0 0 0.380793 0 0.848722V9.27936C0 9.74728 0.380793 10.1281 0.848722 10.1281H13.6361C14.1041 10.1281 14.4848 9.74728 14.4848 9.27936V0.848722C14.4848 0.380793 14.1041 0 13.6361 0Z" fill="#847F7D" />
+                                                        <path d="M11.7704 12.2214H9.47881V10.9766H5.00888V12.2214H2.71733C2.48308 12.2214 2.29297 12.4115 2.29297 12.6457C2.29297 12.88 2.48308 13.0701 2.71733 13.0701H11.7704C12.0046 13.0701 12.1947 12.88 12.1947 12.6457C12.1947 12.4115 12.0046 12.2214 11.7704 12.2214Z" fill="#847F7D" />
+                                                    </svg>
+                                                    <span>PC</span>
+                                                </div>
+                                                <div class="slider-card__name">
+                                                    Название игры
+                                                </div>
+                                                <div class="slider-card__text">
+                                                    Lorem ipsum dolor sit amet consectetur. Cursus sem id viverra lectus.
+                                                </div>
+                                                <div class="slider-card__actions">
+                                                    <a href="#" class="slider-card__action btn-orange">Купить игру</a>
+                                                    <div class="slider-card__discount">-45%</div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="home-main-slider__secondary_card slider-card">
+                                        <div class="slider-card__bg">
+                                            <img class="slider-card__bg_img" src="assets/images/home-new/card-image.jpg" alt="">
+                                            <div class="slider-card__bg_over"></div>
+                                        </div>
+                                        <div class="slider-card__content">
+                                            <div class="slider-card__img">
+                                                <img class="slider-card__img_item" src="assets/images/home-new/card-image.jpg" alt="">
+                                            </div>
+                                            <div class="slider-card__block">
+                                                <div class="slider-card__category">
+                                                    <svg xmlns="http://www.w3.org/2000/svg" width="15" height="14" viewBox="0 0 15 14" fill="none">
+                                                        <path d="M13.6361 0H0.848722C0.380793 0 0 0.380793 0 0.848722V9.27936C0 9.74728 0.380793 10.1281 0.848722 10.1281H13.6361C14.1041 10.1281 14.4848 9.74728 14.4848 9.27936V0.848722C14.4848 0.380793 14.1041 0 13.6361 0Z" fill="#847F7D" />
+                                                        <path d="M11.7704 12.2214H9.47881V10.9766H5.00888V12.2214H2.71733C2.48308 12.2214 2.29297 12.4115 2.29297 12.6457C2.29297 12.88 2.48308 13.0701 2.71733 13.0701H11.7704C12.0046 13.0701 12.1947 12.88 12.1947 12.6457C12.1947 12.4115 12.0046 12.2214 11.7704 12.2214Z" fill="#847F7D" />
+                                                    </svg>
+                                                    <span>PC</span>
+                                                </div>
+                                                <div class="slider-card__name">
+                                                    Название игры
+                                                </div>
+                                                <div class="slider-card__text">
+                                                    Lorem ipsum dolor sit amet consectetur. Cursus sem id viverra lectus.
+                                                </div>
+                                                <div class="slider-card__actions">
+                                                    <a href="#" class="slider-card__action btn-orange">Купить игру</a>
+                                                    <div class="slider-card__discount">-45%</div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="home-main-slider__secondary_card slider-card">
+                                        <div class="slider-card__bg">
+                                            <img class="slider-card__bg_img" src="assets/images/home-new/card-image.jpg" alt="">
+                                            <div class="slider-card__bg_over"></div>
+                                        </div>
+                                        <div class="slider-card__content">
+                                            <div class="slider-card__img">
+                                                <img class="slider-card__img_item" src="assets/images/home-new/card-image.jpg" alt="">
+                                            </div>
+                                            <div class="slider-card__block">
+                                                <div class="slider-card__category">
+                                                    <svg xmlns="http://www.w3.org/2000/svg" width="15" height="14" viewBox="0 0 15 14" fill="none">
+                                                        <path d="M13.6361 0H0.848722C0.380793 0 0 0.380793 0 0.848722V9.27936C0 9.74728 0.380793 10.1281 0.848722 10.1281H13.6361C14.1041 10.1281 14.4848 9.74728 14.4848 9.27936V0.848722C14.4848 0.380793 14.1041 0 13.6361 0Z" fill="#847F7D" />
+                                                        <path d="M11.7704 12.2214H9.47881V10.9766H5.00888V12.2214H2.71733C2.48308 12.2214 2.29297 12.4115 2.29297 12.6457C2.29297 12.88 2.48308 13.0701 2.71733 13.0701H11.7704C12.0046 13.0701 12.1947 12.88 12.1947 12.6457C12.1947 12.4115 12.0046 12.2214 11.7704 12.2214Z" fill="#847F7D" />
+                                                    </svg>
+                                                    <span>PC</span>
+                                                </div>
+                                                <div class="slider-card__name">
+                                                    Название игры
+                                                </div>
+                                                <div class="slider-card__text">
+                                                    Lorem ipsum dolor sit amet consectetur. Cursus sem id viverra lectus.
+                                                </div>
+                                                <div class="slider-card__actions">
+                                                    <a href="#" class="slider-card__action btn-orange">Купить игру</a>
+                                                    <div class="slider-card__discount">-45%</div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
