--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,10 @@ title: Главная страница
                         <div class="swiper-slide">
                             <div class="home-main-slider__slide">
                                 <div class="home-main-slider__main">
-                                    <div class="home-main-slider__main_bg"></div>
+                                    <div class="home-main-slider__main_bg">
+                                        <img class="home-main-slider__main_bg_img" src="assets/images/home-new/main-slider-bg.png" alt="">
+                                        <div class="home-main-slider__main_bg_over"></div>
+                                    </div>
                                     <div class="home-main-slider__main_content">
                                         <div class="home-main-slider__main_category _pc">
                                             <svg xmlns="http://www.w3.org/2000/svg" width="30" height="28" viewBox="0 0 30 28" fill="none">
