--- a/src/index.html
+++ b/src/index.html
@@ -1378,7 +1378,7 @@ title: Главная страница
         </div>
     </section>
 
-    <section class="container-fluid game-slider home-slider-mb home-slider-pt">
+    <section class="container-fluid game-slider home-slider-padding">
         <div class="game-slider__bg"></div>
         <div class="container">
 
@@ -1477,7 +1477,7 @@ title: Главная страница
         </div>
     </section>
 
-    <section class="container-fluid game-slider main-bg-color">
+    <section class="container-fluid game-slider main-bg-color home-slider-padding _top">
         <div class="home-top-bg"></div>
         <div class="container">
 
@@ -1520,7 +1520,7 @@ title: Главная страница
         </div>
     </section>
 
-    <section class="container-fluid game-slider home-slider-mb">
+    <section class="container-fluid game-slider home-slider-padding">
         <div class="game-slider__bg"></div>
         <div class="container">
 
@@ -1713,7 +1713,7 @@ title: Главная страница
         </div>
     </section>
 
-    <section class="container-fluid game-slider home-slider-mb">
+    <section class="container-fluid game-slider home-slider-padding">
         <div class="game-slider__bg"></div>
         <div class="container">
 
