--- a/src/basket.html
+++ b/src/basket.html
@@ -256,6 +256,28 @@ title: Корзина
                             </div>
                         </div>
                     </div>
+                    <div class="basket-none">
+                        <div class="container">
+                            <div class="basket-none__block">
+                                <div class="basket-none__img">
+                                    <img src="assets/images/cart/none-bg.svg" alt="">
+                                </div>
+                                <div class="basket-none__content">
+                                    <div class="basket-none__title">У вас еще нет покупок</div>
+                                    <div class="basket-none__subtitle">Вы это еще можете исправить :)</div>
+                                    <a href="#" class="basket-none__btn">
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="37" height="35" viewBox="0 0 37 35" fill="none">
+                                            <path d="M16.0612 34.9456C16.3702 34.9611 16.6637 34.9766 16.9726 34.9766C21.4387 34.9766 25.75 33.2149 28.9329 30.0626C29.5203 29.4908 29.8293 28.6719 29.7829 27.8528C29.7365 27.0339 29.3502 26.2613 28.7013 25.7513L20.0786 18.9213C19.4761 18.4422 19.4761 17.515 20.0786 17.0515L28.7477 10.2524C29.3966 9.74242 29.7829 8.98526 29.8448 8.16622C29.8912 7.34728 29.5822 6.54372 29.0103 5.95651C24.931 1.86163 19.1208 0.115472 13.1868 1.3826C11.4409 1.75345 9.75639 2.43336 8.2266 3.37595C2.83365 6.74461 -0.148596 12.3694 0.00570383 18.4113C0.222252 27.2039 7.28382 34.4666 16.0612 34.9456ZM19.9398 5.84833C21.2221 5.84833 22.2577 6.88373 22.2577 8.16622C22.2577 9.43335 21.2221 10.4841 19.9398 10.4841C18.6726 10.4841 17.6219 9.43335 17.6219 8.16622C17.6219 6.88373 18.6726 5.84833 19.9398 5.84833Z" fill="#847F7D" />
+                                            <path d="M23.3549 16.6789C22.4312 17.4124 22.5468 18.4838 23.124 19.0579C23.5838 19.5222 24.3322 19.701 25.0707 19.2593C25.9906 18.641 25.9068 17.4241 25.3031 16.8796C24.857 16.4147 24.1977 16.2575 23.3549 16.6789Z" fill="#847F7D" />
+                                            <path d="M28.6997 16.8828C28.2803 17.2806 28.0982 17.9351 28.3601 18.5669C28.7845 19.5905 30.1198 19.8275 30.8787 19.0611C31.5336 18.4063 31.4197 17.3933 30.8787 16.8828C30.3343 16.3331 29.182 16.2769 28.6997 16.8828Z" fill="#847F7D" />
+                                            <path d="M36.4437 16.88C36.0472 16.3819 34.9459 16.195 34.2646 16.88C33.7302 17.3842 33.602 18.3957 34.2646 19.0583C34.8377 19.6968 35.9969 19.6194 36.4437 19.0583C36.9799 18.5746 37.134 17.5703 36.4437 16.88Z" fill="#847F7D" />
+                                        </svg>
+                                        <span>За покупками</span>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
 
                 <div class="basket-page__info">
@@ -475,28 +497,7 @@ title: Корзина
             </div>
         </div>
     </section>
-    <section class="basket-none">
-        <div class="container">
-            <div class="basket-none__block">
-                <div class="basket-none__img">
-                    <img src="assets/images/cart/none-bg.svg" alt="">
-                </div>
-                <div class="basket-none__content">
-                    <div class="basket-none__title">У вас еще нет покупок</div>
-                    <div class="basket-none__subtitle">Вы это еще можете исправить :)</div>
-                    <a href="#" class="basket-none__btn">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="37" height="35" viewBox="0 0 37 35" fill="none">
-                            <path d="M16.0612 34.9456C16.3702 34.9611 16.6637 34.9766 16.9726 34.9766C21.4387 34.9766 25.75 33.2149 28.9329 30.0626C29.5203 29.4908 29.8293 28.6719 29.7829 27.8528C29.7365 27.0339 29.3502 26.2613 28.7013 25.7513L20.0786 18.9213C19.4761 18.4422 19.4761 17.515 20.0786 17.0515L28.7477 10.2524C29.3966 9.74242 29.7829 8.98526 29.8448 8.16622C29.8912 7.34728 29.5822 6.54372 29.0103 5.95651C24.931 1.86163 19.1208 0.115472 13.1868 1.3826C11.4409 1.75345 9.75639 2.43336 8.2266 3.37595C2.83365 6.74461 -0.148596 12.3694 0.00570383 18.4113C0.222252 27.2039 7.28382 34.4666 16.0612 34.9456ZM19.9398 5.84833C21.2221 5.84833 22.2577 6.88373 22.2577 8.16622C22.2577 9.43335 21.2221 10.4841 19.9398 10.4841C18.6726 10.4841 17.6219 9.43335 17.6219 8.16622C17.6219 6.88373 18.6726 5.84833 19.9398 5.84833Z" fill="#847F7D" />
-                            <path d="M23.3549 16.6789C22.4312 17.4124 22.5468 18.4838 23.124 19.0579C23.5838 19.5222 24.3322 19.701 25.0707 19.2593C25.9906 18.641 25.9068 17.4241 25.3031 16.8796C24.857 16.4147 24.1977 16.2575 23.3549 16.6789Z" fill="#847F7D" />
-                            <path d="M28.6997 16.8828C28.2803 17.2806 28.0982 17.9351 28.3601 18.5669C28.7845 19.5905 30.1198 19.8275 30.8787 19.0611C31.5336 18.4063 31.4197 17.3933 30.8787 16.8828C30.3343 16.3331 29.182 16.2769 28.6997 16.8828Z" fill="#847F7D" />
-                            <path d="M36.4437 16.88C36.0472 16.3819 34.9459 16.195 34.2646 16.88C33.7302 17.3842 33.602 18.3957 34.2646 19.0583C34.8377 19.6968 35.9969 19.6194 36.4437 19.0583C36.9799 18.5746 37.134 17.5703 36.4437 16.88Z" fill="#847F7D" />
-                        </svg>
-                        <span>За покупками</span>
-                    </a>
-                </div>
-            </div>
-        </div>
-    </section>
+
 </main>
 
 <!-- Modals -->
