--- a/src/steam.html
+++ b/src/steam.html
@@ -97,7 +97,7 @@ title: Пополнение стим
                         <img class="steam-title__card_img_item" src="assets/images/steam/title-img.png" alt="">
                     </div>
                     <div class="steam-title__card_btns">
-                        <button  data-modal-target="#faq" class="cart-tab-btn">FAQ</button>
+                        <button data-modal-target="#faq" class="cart-tab-btn">FAQ</button>
                         <button class="cart-tab-btn">Инструкция</button>
                     </div>
                 </div>
@@ -413,7 +413,6 @@ title: Пополнение стим
             </form>
         </div>
     </section>
-
     <section class="steam-slider">
         <div class="container">
             <div class="game-slider__block">
@@ -502,6 +501,80 @@ title: Пополнение стим
                 </svg>
             </button>
         </div>
-        <div class="_row-border"></div>
+        <div class="row-border"></div>
+        <div class="faq-steam__contact">
+            <div class="faq-steam__contact_btns">
+                <button class="admin-head__ticket_btn">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
+                        <path d="M18 1H6C4.67441 1.00159 3.40356 1.52888 2.46622 2.46622C1.52888 3.40356 1.00159 4.67441 1 6V14C1.00145 15.1522 1.40009 16.2687 2.12872 17.1613C2.85735 18.0538 3.87141 18.6679 5 18.9V22C4.99997 22.181 5.0491 22.3587 5.14213 22.514C5.23516 22.6693 5.36861 22.7965 5.52823 22.8819C5.68786 22.9673 5.86769 23.0078 6.04852 22.999C6.22935 22.9902 6.4044 22.9325 6.555 22.832L12.3 19H18C19.3256 18.9984 20.5964 18.4711 21.5338 17.5338C22.4711 16.5964 22.9984 15.3256 23 14V6C22.9984 4.67441 22.4711 3.40356 21.5338 2.46622C20.5964 1.52888 19.3256 1.00159 18 1ZM16 13H8C7.73478 13 7.48043 12.8946 7.29289 12.7071C7.10536 12.5196 7 12.2652 7 12C7 11.7348 7.10536 11.4804 7.29289 11.2929C7.48043 11.1054 7.73478 11 8 11H16C16.2652 11 16.5196 11.1054 16.7071 11.2929C16.8946 11.4804 17 11.7348 17 12C17 12.2652 16.8946 12.5196 16.7071 12.7071C16.5196 12.8946 16.2652 13 16 13ZM18 9H6C5.73478 9 5.48043 8.89464 5.29289 8.70711C5.10536 8.51957 5 8.26522 5 8C5 7.73478 5.10536 7.48043 5.29289 7.29289C5.48043 7.10536 5.73478 7 6 7H18C18.2652 7 18.5196 7.10536 18.7071 7.29289C18.8946 7.48043 19 7.73478 19 8C19 8.26522 18.8946 8.51957 18.7071 8.70711C18.5196 8.89464 18.2652 9 18 9Z" fill="#847F7D"></path>
+                    </svg>
+                    <span>Live-чат</span>
+                </button>
+                <button class="admin-head__ticket_btn">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 28 28" fill="none">
+                        <path fill-rule="evenodd" clip-rule="evenodd" d="M3.43748 5.37814L11.0019 12.9458C12.6517 14.5924 15.3485 14.5939 16.9997 12.9458L24.5641 5.37814C24.6403 5.30196 24.6292 5.17651 24.5408 5.11488C23.7693 4.5768 22.8305 4.25781 21.8194 4.25781H6.18225C5.17102 4.25781 4.23231 4.57686 3.46078 5.11488C3.37241 5.17651 3.3613 5.30196 3.43748 5.37814ZM1.41602 9.02399C1.41602 8.22884 1.61316 7.47754 1.96043 6.81719C2.01473 6.71388 2.15238 6.69299 2.23491 6.77552L9.70352 14.2441C12.0686 16.6126 15.9316 16.614 18.2981 14.2441L25.7667 6.77552C25.8492 6.69299 25.9869 6.71388 26.0412 6.81719C26.3884 7.47754 26.5856 8.22889 26.5856 9.02399V18.9737C26.5856 21.6038 24.4462 23.7399 21.8194 23.7399H6.18225C3.5555 23.7399 1.41602 21.6038 1.41602 18.9737V9.02399Z" fill="#847F7D"></path>
+                    </svg>
+                    <span>Support@gamebis.gg</span>
+                </button>
+            </div>
+            <div class="faq-steam__contact_img">
+                <img class="faq-steam__contact_img_item" src="assets/images/steam/faq-support.png" alt="">
+            </div>
+        </div>
+        <div class="row-border"></div>
+        <div class="faq-steam__questions">
+            <div class="faq-steam__question accordion">
+                <div class="accordion__intro">
+                    <div class="faq-steam__question_title">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rerum assumenda velit esse deserunt natus! Vitae provident alias repudiandae sapiente nisi!</div>
+                    <svg class="accordion__intro_icon" xmlns="http://www.w3.org/2000/svg" width="16" height="18" viewBox="0 0 16 18" fill="none">
+                        <path d="M9 1C9 0.447715 8.55228 -2.41412e-08 8 0C7.44772 2.41412e-08 7 0.447715 7 1L9 1ZM7.29289 17.7071C7.68342 18.0976 8.31658 18.0976 8.70711 17.7071L15.0711 11.3431C15.4616 10.9526 15.4616 10.3195 15.0711 9.92893C14.6805 9.53841 14.0474 9.53841 13.6569 9.92893L8 15.5858L2.34315 9.92893C1.95262 9.53841 1.31946 9.53841 0.928933 9.92893C0.538408 10.3195 0.538408 10.9526 0.928933 11.3431L7.29289 17.7071ZM7 1L7 17L9 17L9 1L7 1Z" fill="#FFFEFC" />
+                    </svg>
+                </div>
+                <div class="accordion__content">
+                    <div class="faq-steam__question_text">
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aspernatur temporibus non neque! Excepturi neque voluptatum nemo, animi, omnis, illo officiis reiciendis maiores et aliquid asperiores ducimus debitis placeat laborum minus.
+                    </div>
+                </div>
+            </div>
+            <div class="faq-steam__question accordion">
+                <div class="accordion__intro">
+                    <div class="faq-steam__question_title">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rerum assumenda velit esse deserunt natus! Vitae provident alias repudiandae sapiente nisi!</div>
+                    <svg class="accordion__intro_icon" xmlns="http://www.w3.org/2000/svg" width="16" height="18" viewBox="0 0 16 18" fill="none">
+                        <path d="M9 1C9 0.447715 8.55228 -2.41412e-08 8 0C7.44772 2.41412e-08 7 0.447715 7 1L9 1ZM7.29289 17.7071C7.68342 18.0976 8.31658 18.0976 8.70711 17.7071L15.0711 11.3431C15.4616 10.9526 15.4616 10.3195 15.0711 9.92893C14.6805 9.53841 14.0474 9.53841 13.6569 9.92893L8 15.5858L2.34315 9.92893C1.95262 9.53841 1.31946 9.53841 0.928933 9.92893C0.538408 10.3195 0.538408 10.9526 0.928933 11.3431L7.29289 17.7071ZM7 1L7 17L9 17L9 1L7 1Z" fill="#FFFEFC" />
+                    </svg>
+                </div>
+                <div class="accordion__content">
+                    <div class="faq-steam__question_text">
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aspernatur temporibus non neque! Excepturi neque voluptatum nemo, animi, omnis, illo officiis reiciendis maiores et aliquid asperiores ducimus debitis placeat laborum minus.
+                    </div>
+                </div>
+            </div>
+            <div class="faq-steam__question accordion">
+                <div class="accordion__intro">
+                    <div class="faq-steam__question_title">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rerum assumenda velit esse deserunt natus! Vitae provident alias repudiandae sapiente nisi!</div>
+                    <svg class="accordion__intro_icon" xmlns="http://www.w3.org/2000/svg" width="16" height="18" viewBox="0 0 16 18" fill="none">
+                        <path d="M9 1C9 0.447715 8.55228 -2.41412e-08 8 0C7.44772 2.41412e-08 7 0.447715 7 1L9 1ZM7.29289 17.7071C7.68342 18.0976 8.31658 18.0976 8.70711 17.7071L15.0711 11.3431C15.4616 10.9526 15.4616 10.3195 15.0711 9.92893C14.6805 9.53841 14.0474 9.53841 13.6569 9.92893L8 15.5858L2.34315 9.92893C1.95262 9.53841 1.31946 9.53841 0.928933 9.92893C0.538408 10.3195 0.538408 10.9526 0.928933 11.3431L7.29289 17.7071ZM7 1L7 17L9 17L9 1L7 1Z" fill="#FFFEFC" />
+                    </svg>
+                </div>
+                <div class="accordion__content">
+                    <div class="faq-steam__question_text">
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aspernatur temporibus non neque! Excepturi neque voluptatum nemo, animi, omnis, illo officiis reiciendis maiores et aliquid asperiores ducimus debitis placeat laborum minus.
+                    </div>
+                </div>
+            </div>
+            <div class="faq-steam__question accordion">
+                <div class="accordion__intro">
+                    <div class="faq-steam__question_title">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rerum assumenda velit esse deserunt natus! Vitae provident alias repudiandae sapiente nisi!</div>
+                    <svg class="accordion__intro_icon" xmlns="http://www.w3.org/2000/svg" width="16" height="18" viewBox="0 0 16 18" fill="none">
+                        <path d="M9 1C9 0.447715 8.55228 -2.41412e-08 8 0C7.44772 2.41412e-08 7 0.447715 7 1L9 1ZM7.29289 17.7071C7.68342 18.0976 8.31658 18.0976 8.70711 17.7071L15.0711 11.3431C15.4616 10.9526 15.4616 10.3195 15.0711 9.92893C14.6805 9.53841 14.0474 9.53841 13.6569 9.92893L8 15.5858L2.34315 9.92893C1.95262 9.53841 1.31946 9.53841 0.928933 9.92893C0.538408 10.3195 0.538408 10.9526 0.928933 11.3431L7.29289 17.7071ZM7 1L7 17L9 17L9 1L7 1Z" fill="#FFFEFC" />
+                    </svg>
+                </div>
+                <div class="accordion__content">
+                    <div class="faq-steam__question_text">
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aspernatur temporibus non neque! Excepturi neque voluptatum nemo, animi, omnis, illo officiis reiciendis maiores et aliquid asperiores ducimus debitis placeat laborum minus.
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </section>
