--- a/src/index.html
+++ b/src/index.html
@@ -243,8 +243,11 @@ title: Главная страница
                                                 </div>
                                             </div>
                                             <div class="home-main-slider__ps_content">
-                                                <div class="home-main-slider__ps_content_title">Скидки до</div>
-                                                <div class="home-main-slider__ps_content_num">-80%</div>
+                                                <div class="home-main-slider__ps_content_block">
+                                                    <div class="home-main-slider__ps_content_title">Скидки до</div>
+                                                    <div class="home-main-slider__ps_content_num">-80%</div>
+                                                </div>
+
                                                 <a href="#" class="home-main-slider__ps_content_btn btn-orange">Перейти</a>
                                             </div>
                                         </div>
