--- a/src/about.html
+++ b/src/about.html
@@ -304,7 +304,7 @@ title: О нас
                         <div class="about-services__card_title">Пополнение Вашего Steam аккаунта</div>
                         <div class="about-services__card_text">Lorem ipsum dolor sit amet consectetur. Volutpat nisi neque leo et quis. Libero montes vitae egestas ante in. Convallis habitasse posuere adipiscing orci.</div>
                         <div class="about-services__card_btn">
-                            <a href="catalog.html" class="about-header__btn btn-blue">Пополнить</a>
+                            <a href="steam.html" class="about-header__btn btn-blue">Пополнить</a>
                         </div>
                     </div>
                 </div>
@@ -316,7 +316,7 @@ title: О нас
                         <div class="about-services__card_title">Пополнение ваших мобильных игр</div>
                         <div class="about-services__card_text">Lorem ipsum dolor sit amet consectetur. Volutpat nisi neque leo et quis. Libero montes vitae egestas ante in. Convallis habitasse posuere adipiscing orci.</div>
                         <div class="about-services__card_btn">
-                            <a href="catalog.html" class="about-header__btn btn-yellow">В каталог</a>
+                            <a href="mobile-games.html" class="about-header__btn btn-yellow">В каталог</a>
                         </div>
                     </div>
                 </div>
