--- a/src/basket.html
+++ b/src/basket.html
@@ -583,8 +583,8 @@ title: Корзина
             <div class="basket-steps__body_info">
                 <div class="form-group">
                     <input class="form-input" disabled placeholder="Номер заказа">
-                    <button class="form-input__btn">
-                        <span>1412512512</span>
+                    <button data-copy-btn data-copy-text="#text1" class="form-input__btn">
+                        <span id="text1">1412512512</span>
                         <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none">
                             <path d="M17.2923 5.83301V13.333C17.2923 14.233 16.7757 15.008 16.0257 15.383C16.034 15.258 16.0423 15.133 16.0423 14.9997V7.49967C16.0423 5.54967 14.4507 3.95801 12.5007 3.95801H5.52565C5.90898 3.21634 6.67565 2.70801 7.56732 2.70801H14.1673C15.8923 2.70801 17.2923 4.10801 17.2923 5.83301ZM12.5007 5.20801H5.00065C3.73648 5.20801 2.70898 6.23551 2.70898 7.49967V14.9997C2.70898 16.2638 3.73648 17.2913 5.00065 17.2913H12.5007C13.7648 17.2913 14.7923 16.2638 14.7923 14.9997V7.49967C14.7923 6.23551 13.7648 5.20801 12.5007 5.20801Z" fill="#847F7D" />
                         </svg>
@@ -592,8 +592,8 @@ title: Корзина
                 </div>
                 <div class="form-group">
                     <input class="form-input" disabled placeholder="Дата заказа">
-                    <button class="form-input__btn">
-                        <span>08.05.2024 17:52</span>
+                    <button data-copy-btn data-copy-text="#text2" class="form-input__btn">
+                        <span id="text2">08.05.2024 17:52</span>
                         <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none">
                             <path d="M17.2923 5.83301V13.333C17.2923 14.233 16.7757 15.008 16.0257 15.383C16.034 15.258 16.0423 15.133 16.0423 14.9997V7.49967C16.0423 5.54967 14.4507 3.95801 12.5007 3.95801H5.52565C5.90898 3.21634 6.67565 2.70801 7.56732 2.70801H14.1673C15.8923 2.70801 17.2923 4.10801 17.2923 5.83301ZM12.5007 5.20801H5.00065C3.73648 5.20801 2.70898 6.23551 2.70898 7.49967V14.9997C2.70898 16.2638 3.73648 17.2913 5.00065 17.2913H12.5007C13.7648 17.2913 14.7923 16.2638 14.7923 14.9997V7.49967C14.7923 6.23551 13.7648 5.20801 12.5007 5.20801Z" fill="#847F7D" />
                         </svg>
@@ -601,8 +601,8 @@ title: Корзина
                 </div>
                 <div class="form-group _row-all">
                     <input class="form-input" disabled placeholder="Указанный аккаунт Steam">
-                    <button class="form-input__btn">
-                        <span>https://steamcommunity.com/id/deshellart</span>
+                    <button data-copy-btn data-copy-text="#text3" class="form-input__btn">
+                        <span id="text3">https://steamcommunity.com/id/deshellart</span>
                         <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none">
                             <path d="M17.2923 5.83301V13.333C17.2923 14.233 16.7757 15.008 16.0257 15.383C16.034 15.258 16.0423 15.133 16.0423 14.9997V7.49967C16.0423 5.54967 14.4507 3.95801 12.5007 3.95801H5.52565C5.90898 3.21634 6.67565 2.70801 7.56732 2.70801H14.1673C15.8923 2.70801 17.2923 4.10801 17.2923 5.83301ZM12.5007 5.20801H5.00065C3.73648 5.20801 2.70898 6.23551 2.70898 7.49967V14.9997C2.70898 16.2638 3.73648 17.2913 5.00065 17.2913H12.5007C13.7648 17.2913 14.7923 16.2638 14.7923 14.9997V7.49967C14.7923 6.23551 13.7648 5.20801 12.5007 5.20801Z" fill="#847F7D" />
                         </svg>
