--- a/src/mobile-games.html
+++ b/src/mobile-games.html
@@ -30,6 +30,11 @@ title: Мобильные игры
                                     <span class="timer__divide_dot"></span>
                                 </div>
                                 <div class="timer__minutes"></div>
+                                <div class="timer__divide">
+                                    <span class="timer__divide_dot"></span>
+                                    <span class="timer__divide_dot"></span>
+                                </div>
+                                <div class="timer__seconds"></div>
                             </div>
                             <div class="timer__message">
                                 Время вышло!
