--- a/src/catalog.html
+++ b/src/catalog.html
@@ -5,7 +5,7 @@ title: Главная страница
 
 <main class="main">
 
-    <section class="home-catalog-list">
+<!--     <section class="home-catalog-list">
         <div class="container">
             <div class="catalog__tabs">
 
@@ -1022,7 +1022,7 @@ title: Главная страница
             </div>
             <div class="catalog__bg"></div>
         </div>
-    </section>
+    </section> -->
 
     <section class="container-fluid catalog-slider">
         <div class="container">
