--- a/src/index.html
+++ b/src/index.html
@@ -704,7 +704,7 @@ title: Главная страница
         </div>
     </section>
 
-    <section class="home-catalog-list">
+    <!-- <section class="home-catalog-list">
         <div class="container">
             <div class="catalog__tabs">
 
@@ -1721,7 +1721,7 @@ title: Главная страница
             </div>
             <div class="catalog__bg"></div>
         </div>
-    </section>
+    </section> -->
 
     <section class="container-fluid game-slider home-slider-padding">
         <div class="game-slider__bg"></div>
