--- a/src/index.html
+++ b/src/index.html
@@ -58,7 +58,7 @@ title: Главная страница
                                         </div>
                                     </div>
                                 </div>
-                                <!-- <div class="home-main-slider__secondary">
+                                <div class="home-main-slider__secondary">
                                     <div class="home-main-slider__secondary_card slider-card">
                                         <div class="slider-card__bg">
                                             <img class="slider-card__bg_img" src="assets/images/home-new/card-image.jpg" alt="">
@@ -179,10 +179,10 @@ title: Главная страница
                                             </div>
                                         </div>
                                     </div>
-                                </div> -->
+                                </div>
                             </div>
                         </div>
-<!--                         <div class="swiper-slide">
+                        <div class="swiper-slide">
                             <div class="home-main-slider__slide">
                                 <div class="home-main-slider__main">
                                     <div class="home-main-slider__main_bg">
@@ -696,7 +696,7 @@ title: Главная страница
                                     </div>
                                 </div>
                             </div>
-                        </div> -->
+                        </div>
                     </div>
                 </div>
                 <div class="swiper-pagination"></div>
