--- a/src/new-index.html
+++ b/src/new-index.html
@@ -1,11 +1,19 @@
 ---
-layout: main
+layout: new-layout
 title: Главная страница
 ---
 
 
-<main class="main">
+<main class="main-new">
     {{> new-catalog }}
 
     {{> new-steam }}
+
+    {{> new-mobile }}
+
+    {{> new-advantages }}
+
+    {{> new-blog }}
+
+    {{> new-reviews }}
 </main>
