--- a/src/basket.html
+++ b/src/basket.html
@@ -3,7 +3,7 @@ layout: main
 title: Корзина
 ---
 
-<main class="main">
+<main class="main-new">
     <section class="container-fluid basket-page">
         <div class="container">
 
