--- a/src/cart.html
+++ b/src/cart.html
@@ -3,7 +3,7 @@ layout: main
 title: Карточка
 ---
 
-<main class="main">
+<main class="main-new">
     <div class="cart-bg-img">
         <div class="cart-bg-img__blur"></div>
         <img class="cart-bg-img__item" src="assets/images/cart/1.png" alt="">
