--- a/src/reviews.html
+++ b/src/reviews.html
@@ -3,7 +3,7 @@ layout: main
 title: О нас
 ---
 
-<main class="main">
+<main class="main-new">
     <section class="about-reviews">
         <div class="container">
             <div class="about-page__block">
