--- a/src/steam-gifts.html
+++ b/src/steam-gifts.html
@@ -3,7 +3,7 @@ layout: main
 title: Главная страница
 ---
 
-<main class="main">
+<main class="main-new">
 
     <div class="steam-gifts-slider">
         <div class="container">
