--- a/src/catalog.html
+++ b/src/catalog.html
@@ -3,7 +3,7 @@ layout: main
 title: Главная страница
 ---
 
-<main class="main">
+<main class="main-new">
 
 <!--     <section class="home-catalog-list">
         <div class="container">
