--- a/src/sliders.html
+++ b/src/sliders.html
@@ -3,7 +3,7 @@ layout: main
 title: Главная страница
 ---
 
-<main class="main mb-5">
+<main class="main-new mb-5">
     <section class="container-fluid home-main-slider">
         <div class="container">
             <div class="home-main-slider__block">
